# Wiidroid-Homebrew

./: CMakeLists.txt  README.md  wid_wii_id.cpp  wii.xml  wiidroid.cpp
.github/workflows/: greetings0main.yml
